Tidy up using model stored in index